# FIT_NSU_SEM3_SEM4

./: Pract2.doc  README.md  kill_me.s
Computers & Peripheral devices/: README.md
Computers & Peripheral devices/lab1/: README.md  main.c
Computers & Peripheral devices/lab2/: README.md
Computers & Peripheral devices/lab2/O0/: main.s
Computers & Peripheral devices/lab2/O3/: main.s
Computers & Peripheral devices/lab3/libusb/: main.cpp
Computers & Peripheral devices/lab3/opencv/: main.cpp
Computers & Peripheral devices/lab4/blas/: main.cpp  matrix.cpp  matrix.h
Computers & Peripheral devices/lab4/default/: main.cpp  matrix.cpp  matrix.h
Computers & Peripheral devices/lab4/intrinsic/: main.cpp  matrix.cpp  matrix.h
Computers & Peripheral devices/lab5/: main.cpp
Computers & Peripheral devices/lab6/: main.cpp
OOP/: README.md
OOP/C++/lab0/: README.md  WordList.cpp  WordList.h  interface.h  main.cpp  output.cpp  output.csv  word_table.cpp
OOP/C++/lab1/: BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp  test.cpp
OOP/C++/lab2/: main.cpp
OOP/C++/lab3/: main.cpp
OOP/Java/: README.md
OOP/lab2/: pom.xml
OS/Files & file systems/: README.md
OS/Process address space/: README.md
OS/System calls/: README.md
Parallel programming/: README.md
Parallel programming/lab0/: README.md
Parallel programming/lab1/: README.md  main.c  vector.cpp
Parallel programming/lab2/: README.md  main.cpp  omp_default.cpp  omp_schedule.cpp
Parallel programming/lab3/: README.md
Parallel programming/lab4/: README.md  life.h
Parallel programming/lab5/: README.md
(+276 files in other folders)
